mockiato/tests/ui/malformed_mockable_attr.stderr
error: Unsupported syntax for #[mockable]
 --> $DIR/malformed_mockable_attr.rs:3:12
  |
3 | #[mockable("Bar")]
  |            ^^^^^
  |
  = help: Example usage: #[mockable(name = "FooMock")]

error: aborting due to previous error

