mockiato/tests/ui/malformed_mockable_attr.rs
use mockiato_codegen::mockable;

#[mockable("Bar")]
trait Foo {}

fn main() {}
